src/objects/Trade_Ally_Subscription__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Trade Ally Subscriptions</relationshipLabel>
        <relationshipName>Trade_Ally_Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Trade_Ally_Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Price_Per_Unit__c</fullName>
        <label>Price Per Unit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Recurring_Payment_Date__c</fullName>
        <label>Recurring Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Stripe_Id__c</fullName>
        <label>Stripe Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stripe_Product_Name__c</fullName>
        <label>Stripe Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription_Amount__c</fullName>
        <label>Subscription Amount</label>
        <summarizedField>Transaction__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Transaction__c.Status__c</field>
            <operation>equals</operation>
            <value>Succeeded</value>
        </summaryFilterItems>
        <summaryForeignKey>Transaction__c.Trade_Ally_Subscription__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Subscription_Level__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subscription Level</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Trade Ally Subscriptions</relationshipLabel>
        <relationshipName>Trade_Ally_Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subscription_Status__c</fullName>
        <label>Subscription Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Trade Ally Subscription</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Customer__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TASub-{000000}</displayFormat>
        <label>TA Subscription Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trade Ally Subscriptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>